# MakeUofT

./: .gitignore  GitHub_Tut.md  MakeUofT 2026 Participant Package.docx  README.md  Smile__Gift_Selector.ipynb  esp_face_bridge.py  main.py
SmileDisplay/: SmileDisplay.ino
computer_vision/: arduino_bridge.py  emotion_sender.py  find_port.py  gift_logic.py  virtual_giftbox.py
gsr_sensor/: gsr_sensor.ino
presage/: CMakeLists.txt
